# transportadora-rust

./: Cargo.toml  README.md
api/: health.rs  viagens.rs
frontend/: package.json
migrations/20250902100000_create_motoristas/: up.sql
public/: index.html
sql/migrations/: 20250902114341_init.sql
src/: db.rs  main.rs  models.rs
src/api/controllers/: motorista_controller.rs
src/api/models/: motorista.rs
src/api/routes/: motorista_routes.rs
src/api/services/: motorista_service.rs
