[package]
name = "transportadora"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features=["macros","rt-multi-thread","sync"] }
serde = { version = "1", features=["derive"] }
serde_json = "1"
vercel_runtime = "1"
sqlx = { version = "0.7", features=["runtime-tokio-rustls","postgres","macros","chrono","uuid","migrate"] }
uuid = { version = "1", features=["v4","serde"] }
chrono = { version = "0.4", features=["serde"] }
dotenvy = "0.15"

[lib]
path = "src/lib.rs"

# Cada arquivo em api/*.rs é um binário/rota da API
[[bin]]
name = "health"
path = "api/health.rs"

[[bin]]
name = "viagens"
path = "api/viagens.rs"

[[bin]]
name = "motoristas"
path = "api/motoristas.rs"

[[bin]]
name = "caminhoes"
path = "api/caminhoes.rs"

[[bin]]
name = "clientes"
path = "api/clientes.rs"
